<resources>
    <string name="app_name">Unicaen Timetable</string>

    <string name="about_title">About</string>
    <string name="about_description">\nThis software has been created by Skyost with the help of some libraries : AppIntro, RateThisApp, WeekView (by thellmund), biweekly, Joda-Time, Color Picker, OkHttp, Snacky, Room, LiveData and ViewModel. \n\nYou can check the source code of this software on Github.\n\nThe software and its source code are available under GNU GPL v3.\n\nDisclaimer :\nThis application has not been developed by any official member of the University. Consequently, do not send any request to the establishment if you have a problem with this application.\nFurthermore, this application needs your student number with your password to work. Your credentials will not be send to any third party, except to the University server in order to download your timetable.\nIf you do not trust this application, you can still check the source code with the "Github" link below.</string>
    <string name="about_share_share">Share with…</string>
    <string name="about_share_title">Unicaen Timetable</string>
    <string name="about_share_description">Check your timetable on your smartphone : https://play.google.com/store/apps/details?id=fr.skyost.timetable.</string>

    <string name="dialog_generic_button_positive" translatable="false">OK</string>
    <string name="dialog_generic_button_cancel">Cancel</string>
    <string name="dialog_login_title">Log in</string>
    <string name="dialog_login_username">Username (before @etu.unicaen.fr)</string>
    <string name="dialog_login_password">Password</string>
    <string name="dialog_login_button_positive">Log in</string>
    <string name="dialog_login_button_more">More</string>
    <string name="dialog_advancedlogin_server">Server</string>
    <string name="dialog_advancedlogin_calendar">Calendar</string>
    <string name="dialog_advancedlogin_parameters">Additional parameters</string>
    <string name="dialog_advancedlogin_button_less">Less</string>
    <string name="dialog_event_button_neutral">Create alarm…</string>
    <string name="dialog_event_button_negative">Reset color</string>
    <string name="dialog_error_notfound_title">Calendar not found !</string>
    <string name="dialog_error_notfound_message">If you are on holiday or you just come back from holidays, this is normal, please re-try once your timetable is available on Zimbra.\nElse, then the username you have entered may be incorrect.\nYou may also have entered a bad calendar name in the application settings.\nAnyway, this error is frequent. Do not hesitate to try again later.</string>
    <string name="dialog_error_newauth_title">New authentication method</string>
    <string name="dialog_error_newauth_message">Hey !\nWe use a new authentication method in this new version of Unicaen Timetable, this means that you have to re-authenticate yourself.\nSorry for this little disagreement !</string>
    <string name="dialog_error_notimetable_title">No timetable downloaded</string>
    <string name="dialog_error_notimetable_message">You must refresh the timetable in order to do that.</string>
    <string name="dialog_color_title">Change color</string>

    <string name="intro_slide_1_title">Your timetable on your smartphone !</string>
    <string name="intro_slide_1_description">This application allows the students of the University of Caen Normandie to check their timetable directly on their smartphone.</string>
    <string name="intro_slide_2_title">We need an access to your Unicaen account…</string>
    <string name="intro_slide_2_description">Don\'t worry ! Your credentials will not be send to any third party and will be used only to download your timetable from the Unicaen servers.</string>
    <string name="intro_slide_3_title">Everything is completed !</string>
    <string name="intro_slide_3_description">You are ready. Touch the button below to begin.</string>

    <string name="intro_dialog_wait">Please wait…</string>
    <string name="intro_toast_error_permission">We need the Internet permission !</string>
    <string name="intro_toast_error_network">Error while downloading your timetable.</string>
    <string name="intro_toast_error_credentials">Invalid username or password.</string>
    <string name="intro_toast_error_account">Unable to delete the existing account, please try back later.</string>

    <string name="main_default_title">Hello !</string>
    <string name="main_default_description" formatted="false">And welcome to your timetable !\n\nPlease tap on the top button to check your timetable or to configure the application.\n\nPress the bottom button to refresh your timetable.\n\nUpdated your timetable for the last time : %1$s.</string>
    <string name="main_default_description_never">Never</string>
    <string name="main_default_description_updaterequired">(either an update is required or no lesson is available)</string>

    <string name="main_snackbar_downloading">Downloading your timetable…</string>
    <string name="main_snackbar_success">Success !</string>
    <string name="main_snackbar_pinchtozoom">Don\'t forget that you can pinch to zoom or tap on a lesson to see more information !</string>
    <string name="main_snackbar_changecolor">Long press on a lesson to change its color !</string>
    <string name="main_snackbar_error_syncactive">A sync is already running.</string>
    <string name="main_snackbar_error_network">Error while downloading your timetable.</string>
    <string name="main_snackbar_error_noaccount">No account. Redirecting you to the login screen…</string>
    <string name="main_snackbar_error_credentials">Bad password. Redirecting you to the login screen…</string>
    <string name="main_snackbar_error_alarm">Unable to start the alarm manager.</string>

    <string name="day_menu_week">Week selector</string>
    <string name="day_menu_previous">Previous</string>
    <string name="day_menu_next">Next</string>

    <string name="main_nav_open">Open navigation drawer</string>
    <string name="main_nav_close">Close navigation drawer</string>

    <string name="main_nav_header">Timetable</string>
    <string name="main_nav_email" translatable="false" formatted="false">%1$s@etu.unicaen.fr</string>

    <string name="main_nav_home_home">Home</string>

    <string name="main_nav_timetable">Timetable</string>
    <string name="main_nav_timetable_week">Week view</string>
    <string name="main_nav_timetable_monday">Monday</string>
    <string name="main_nav_timetable_tuesday">Tuesday</string>
    <string name="main_nav_timetable_wednesday">Wednesday</string>
    <string name="main_nav_timetable_thursday">Thursday</string>
    <string name="main_nav_timetable_friday">Friday</string>

    <string name="main_nav_others">Others</string>
    <string name="main_nav_others_settings">Settings</string>
    <string name="main_nav_others_about">About</string>

    <string name="notification_lessonringermode_channel">Lesson mode</string>
    <string name="notification_lessonsringermode_title">Lessons mode activated</string>
    <string name="notification_lessonsringermode_message" formatted="false">The ringer mode has been set to %1$s. You can disable this option for this lesson by clicking on the button below.</string>
    <string name="notification_lessonsringermode_exception" formatted="false">Unable to change the ringer mode. Please be sure that the application still has the permission to change the ringer mode.</string>
    <string name="notification_lessonsringermode_button">Disable</string>

    <string name="notification_sync_channel">Synchronization</string>
    <string name="notification_sync_title">Synchronizing…</string>

    <string name="preferences_account">Account</string>
    <string name="preferences_account_account">Switch account</string>

    <string name="preferences_server">Server</string>
    <string name="preferences_server_calendar">Calendar</string>
    <string name="preferences_server_server">Zimbra server</string>
    <string name="preferences_server_parameters">Additional parameters</string>
    <string name="preferences_server_calendar_interval">Calendar download interval</string>
    <string-array name="preferences_server_calendar_interval_keys">
        <item>2 weeks</item>
        <item>1 month</item>
        <item>3 months</item>
        <item>Full available calendar</item>
    </string-array>
    <string-array name="preferences_server_calendar_interval_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="preferences_application" translatable="false">Application</string>
    <string name="preferences_application_colorlessonsautomatically">Automatically color lessons</string>
    <string name="preferences_application_lessonsringermode">Ringer mode during lessons (Beta)</string>
    <string-array name="preferences_application_lessonsringermode_keys">
        <item>No change</item>
        <item>Silent</item>
        <item>Vibrate</item>
    </string-array>
    <string-array name="preferences_application_lessonsringermode_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="preferences_application_todayautomatically">Automatically open today\'s page</string>

    <string name="preferences_application_enableads_title">Enable ads</string>
    <string name="preferences_application_enableads_description">You have the choice to enable ads. But you have to know that it is only a little banner on the home page and this is the only income I get from this application.</string>
    <string name="preferences_application_enableads_restart">Please restart the app to see the changes.</string>

    <string name="settings_default" formatted="false">Default : %1$s</string>
    <string name="settings_account" formatted="false">Unicaen account : %1$s</string>

    <string name="settings_default_server" translatable="false">https://webmail.unicaen.fr</string>
    <string name="settings_default_calendarname" translatable="false">Emploi du temps</string>
    <string name="settings_default_parameters" translatable="false">auth=ba&amp;fmt=ics</string>

    <string name="settings_calendar_interval_description_1" formatted="false">This will download your timetable from %1$s to %2$s.</string>
    <string name="settings_calendar_interval_description_2" formatted="false">This will download all your available timetable on the Unicaen servers.</string>

    <string name="settings_toast_silent">Please tick "Unicaen Timetable".</string>

    <string name="widget_today_title">Today</string>
    <string name="widget_today_nothing">Nothing for this day. If you think there should be something, please refresh your timetable.</string>
    <string name="widget_today_nothingremaining">There\'s nothing remaining today.</string>
    <string name="widget_today_error">Failed to load your timetable.</string>
    <string name="widget_refresh">Refresh</string>
    <string name="widget_back">Back</string>
    <string name="widget_next">Next</string>

</resources>
