<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/main_nav_home_home">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home_home"
                    android:icon="@drawable/nav_home_home_drawable"
                    android:title="@string/main_nav_home_home"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/nav_timetable"
        android:checkableBehavior="single"
        android:title="@string/main_nav_timetable">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_timetable_week"
                    android:icon="@drawable/nav_timetable_week_drawable"
                    android:title="@string/main_nav_timetable_week"/>
                <item
                    android:id="@+id/nav_timetable_monday"
                    android:icon="@drawable/nav_timetable_monday_drawable"
                    android:title="@string/main_nav_timetable_monday"/>
                <item
                    android:id="@+id/nav_timetable_tuesday"
                    android:icon="@drawable/nav_timetable_tuesday_drawable"
                    android:title="@string/main_nav_timetable_tuesday"/>
                <item
                    android:id="@+id/nav_timetable_wednesday"
                    android:icon="@drawable/nav_timetable_wednesday_drawable"
                    android:title="@string/main_nav_timetable_wednesday"/>
                <item
                    android:id="@+id/nav_timetable_thursday"
                    android:icon="@drawable/nav_timetable_thursday_drawable"
                    android:title="@string/main_nav_timetable_thursday"/>
                <item
                    android:id="@+id/nav_timetable_friday"
                    android:icon="@drawable/nav_timetable_friday_drawable"
                    android:title="@string/main_nav_timetable_friday"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/nav_others"
        android:title="@string/main_nav_others">
        <menu>
            <item
                android:id="@+id/nav_others_settings"
                android:icon="@drawable/nav_others_settings_drawable"
                android:title="@string/main_nav_others_settings"/>
            <item
                android:id="@+id/nav_others_about"
                android:icon="@drawable/nav_others_about_drawable"
                android:title="@string/main_nav_others_about"/>
        </menu>
    </item>

</menu>
