<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="color-lessons-automatically"
        android:title="@string/preferences_application_colorlessonsautomatically"
        android:defaultValue="false"/>

    <ListPreference
        android:key="lessons-ringer-mode"
        android:title="@string/preferences_application_lessonsringermode"
        android:defaultValue="0"
        android:entries="@array/preferences_application_lessonsringermode_keys"
        android:entryValues="@array/preferences_application_lessonsringermode_values"/>

    <SwitchPreference
        android:key="today-automatically"
        android:title="@string/preferences_application_todayautomatically"
        android:defaultValue="false"/>

    <SwitchPreference
        android:key="ads"
        android:title="@string/preferences_application_enableads_title"
        android:summary="@string/preferences_application_enableads_description"
        android:defaultValue="true"/>

</PreferenceScreen>
