<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="server"
        android:title="@string/preferences_server_server"
        android:defaultValue="@string/settings_default_server"
        android:selectAllOnFocus="true"
        android:inputType="textUri"
        android:singleLine="true"
        android:maxLines="1"/>

    <EditTextPreference
        android:key="calendar-nohtml"
        android:title="@string/preferences_server_calendar"
        android:defaultValue="@string/settings_default_calendarname"
        android:selectAllOnFocus="true"
        android:inputType="textFilter|textNoSuggestions"
        android:singleLine="true"
        android:maxLines="1"/>

    <ListPreference
        android:key="calendar-interval"
        android:title="@string/preferences_server_calendar_interval"
        android:defaultValue="0"
        android:entries="@array/preferences_server_calendar_interval_keys"
        android:entryValues="@array/preferences_server_calendar_interval_values"/>

</PreferenceScreen>
