<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/day_menu_week"
        android:icon="@drawable/day_menu_week"
        android:title="@string/day_menu_week"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/day_menu_previous"
        android:icon="@drawable/day_menu_previous"
        android:title="@string/day_menu_previous"
        android:orderInCategory="200"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/day_menu_next"
        android:icon="@drawable/day_menu_next"
        android:title="@string/day_menu_next"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"/>

</menu>
