<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <EditText
        android:id="@+id/dialog_advancedlogin_edittext_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/dialog_login_username"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/dialog_advancedlogin_edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:hint="@string/dialog_login_password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/dialog_advancedlogin_edittext_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:hint="@string/dialog_advancedlogin_server"
        android:inputType="textWebEmailAddress"/>

    <EditText
        android:id="@+id/dialog_advancedlogin_edittext_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:hint="@string/dialog_advancedlogin_calendar"
        android:inputType="text"/>

</LinearLayout>